--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,10 @@
 
 .heading
 {
-  flex: 0.33;
+  
   display: flex;
   align-items: center;
- 
+  flex-direction: column;
 
   
 }
@@ -88,5 +88,14 @@
   cursor: pointer;
   background-color: black;
   color: #1cd8f5;
+
+}
+
+.player
+{
+  
+  color: white;
+  padding:5px;
+ 
 
 }
